welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: value <== is not a member of Int
    if (diag <==) {
             ^